fix: handle null escalation code (#913)